--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
