--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe class="tela" name="tela" width="560" height="315" src="https://www.youtube.com/embed/ifFJ84F4N6I?si=_93gQFJ0NSvKsX1h&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+           <iframe src="home.html" class="tela" name="tela" frameborder="1"></iframe>
         </section>
         <section id="paginas">
             <ul>
-                <li><a href="#" target="tela"><img src="imagens/botao-home.png" alt="icon-home"></a></li>
-                <li><a href="#" target=""><img src="imagens/twitter.png" alt="icon-x"></a></li>
-                <li><a href="#" target=""><img src="imagens/github.png" alt="icon-github"></a></li>
-                <li><a href="#" target="tela"><img src="imagens/youtube.png" alt="icon-youtube"></a></li>
+                <li><a href="home.html" target="tela"><img src="imagens/botao-home.png" alt="icon-home"></a></li>
+                <li><a href="x.html" target="tela"><img src="imagens/twitter.png" alt="icon-x"></a></li>
+                <li><a href="https://github.com" target="_blank"><img src="imagens/github.png" alt="icon-github"></a></li>
+                <li><a href="youtube.html" target="tela"><img src="imagens/youtube.png" alt="icon-youtube"></a></li>
             </ul>
         </section>
     </main>
